Modify button style

--- a/index.html
+++ b/index.html
@@ -38,6 +38,14 @@
             border-width: 50px 15px 0px 15px;
             border-style: solid;
         }
+
+        input {
+            background-color: #A6FFFF;
+            border-radius: 10px;
+            border-color: #A6FFFF;
+            font-size: 18px;
+            cursor: pointer;
+        }
     </style>
 </head>
 
